# atlas

./: .gitignore  .gitmodules  CMakeLists.txt
demos/: breakout.cpp  call_lib.cpp  stolen_anvil_demo.cpp
include/: atlas.h  backend.h  camera.h  err.h  mesh.h  my_math.h  window.h
src/: atlas.cpp  backend.cpp  camera.cpp  mesh.cpp  my_math.cpp  window.cpp
